--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+#PyPi
+.pypirc
+
 # Distribution / packaging
 .Python
 build/
@@ -77,3 +80,4 @@ venv.bak/
 
 # Temp directory
 temp/
+tests/
